# capinde

./: .gitignore  .mise.toml  Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.prod.yml  shell.nix
.github/workflows/: publish.yml
src/: errors.rs  janitor.rs  keys.rs  logger.rs  main.rs  scueduler.rs  vars.rs
src/captchas/: classic.rs  grid.rs  image.rs  mod.rs
src/cli/: cleanup.rs  healthcheck.rs  mod.rs
src/middlewares/: auth.rs
src/models/: api.rs  mod.rs  params.rs  payload.rs
src/provider/: archive.rs  initializer.rs  manifest.rs  mod.rs
src/routes/: generation.rs  janitor.rs  mod.rs  provider.rs  server.rs  verification.rs
src/verification/: mod.rs  store.rs
tests/fixtures/albums/: Manifest.yaml
