[package]
name = "capinde"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json", "multipart"] }
captcha-rs = "0.2.11"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
dotenvy = "0.15.7"
itertools = "0.14.0"
log = "0.4.27"
magick_rust = "1.0.0"
minreq = "2.13.4"
paste = "1.0.15"
rand = "0.9.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "signal"] }
tokio-cron-scheduler = { version = "0.14.0", features = ["signal"] }
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
zip = "4.2.0"

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "thin"
codegen-units = 1
panic = "abort"
